修改备注